--- a/Resume.presentation/Views/ContactUs/ContactUs.cshtml
+++ b/Resume.presentation/Views/ContactUs/ContactUs.cshtml
@@ -14,20 +14,20 @@
 						<!-- Contact -->
 						
 
-						<form id="contact-form" class="contact-form mt-5" data-toggle="validator" novalidate="true">
+						<form id="" class="contact-form mt-5" data-toggle="validator" novalidate="true" method="post">
 							<div class="row">
 								<div class="form-group col-12 col-md-6">
 									<i class="font-icon icon-user"></i>
-									<input type="text" class="input input__icon form-control" id="nameContact" name="nameContact" placeholder="Full name" required="required" autocomplete="on" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')">
+									<input type="text" class="input input__icon form-control" id="nameContact" name="fullName" placeholder="Full name" required="required" autocomplete="on" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')">
 									<div class="help-block with-errors"></div>
 								</div>
 								<div class="form-group col-12 col-md-6">
 									<i class="font-icon icon-at"></i>
-									<input type="email" class="input input__icon form-control" id="emailContact" name="emailContact" placeholder="Email address" required="required" autocomplete="on" oninvalid="setCustomValidity('Email is incorrect')" onkeyup="setCustomValidity('')">
+									<input type="email" class="input input__icon form-control" id="emailContact" name="email" placeholder="Email address" required="required" autocomplete="on" oninvalid="setCustomValidity('Email is incorrect')" onkeyup="setCustomValidity('')">
 									<div class="help-block with-errors"></div>
 								</div>
 								<div class="form-group col-12 col-md-12">
-									<textarea class="textarea form-control" id="messageContact" name="messageContact" placeholder="Your Message" rows="4" required="required" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')" style="overflow: hidden; overflow-wrap: break-word; height: 117.6px;"></textarea>
+									<textarea class="textarea form-control" id="messageContact" name="message" placeholder="Your Message" rows="4" required="required" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')" style="overflow: hidden; overflow-wrap: break-word; height: 117.6px;"></textarea>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -36,7 +36,7 @@
 									<div id="validator-contact" class="hidden"></div>
 								</div>
 								<div class="col-12 col-md-6 order-1 order-md-2 text-right">
-									<button type="submit" class="btn disabled"><i class="font-icon icon-send"></i> Send Message<span></span></button>
+									<button type="submit" class="btn"><i class="font-icon icon-send"></i> Send Message<span></span></button>
 								</div>
 							</div>
 						</form>
