--- a/Resume.presentation/Views/Shared/_Layout.cshtml
+++ b/Resume.presentation/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
 		<div class="nav-wrap">
 			<ul class="nav">
 				<li class="nav__item"><a href="about.html">About</a></li>
-				<li class="nav__item"><a class="active" href="resume.html">Resume</a></li>
+				<li class="nav__item"><a class="active" asp-controller="Home" asp-action="Index">Resume</a></li>
 				<li class="nav__item"><a href="portfolio.html">Portfolio</a></li>
 				<li class="nav__item"><a href="blog.html">Blog</a></li>
 				<li class="nav__item"><a asp-controller="ContactUs" asp-action="ContactUs">Contact</a></li>
