--- a/Resume.presentation/Views/ContactUs/ContactUs.cshtml
+++ b/Resume.presentation/Views/ContactUs/ContactUs.cshtml
@@ -1,5 +1,5 @@
 ﻿
-
+@model Resume.Domain.Entities.ContacUs.ContactUs;
 
 <div class="content" data-simplebar="init" data-simplebar-direction="rtl">
 	<div class="simplebar-wrapper" style="margin: 0px -30px;">
@@ -18,18 +18,22 @@
 							<div class="row">
 								<div class="form-group col-12 col-md-6">
 									<i class="font-icon icon-user"></i>
-									<input type="text" class="input input__icon form-control" id="nameContact" name="fullName" placeholder="Full name" required="required" autocomplete="on" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')">
+									<input type="text" class="input input__icon form-control" id="nameContact" asp-for="FullName" placeholder="Full name" required="required" autocomplete="on" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')">
 									<div class="help-block with-errors"></div>
 								</div>
 								<div class="form-group col-12 col-md-6">
 									<i class="font-icon icon-at"></i>
-									<input type="email" class="input input__icon form-control" id="emailContact" name="email" placeholder="Email address" required="required" autocomplete="on" oninvalid="setCustomValidity('Email is incorrect')" onkeyup="setCustomValidity('')">
+									<input type="email" class="input input__icon form-control" id="emailContact" asp-for="Email" placeholder="Email address" required="required" autocomplete="on" oninvalid="setCustomValidity('Email is incorrect')" onkeyup="setCustomValidity('')">
 									<div class="help-block with-errors"></div>
 								</div>
 								<div class="form-group col-12 col-md-12">
-									<textarea class="textarea form-control" id="messageContact" name="message" placeholder="Your Message" rows="4" required="required" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')" style="overflow: hidden; overflow-wrap: break-word; height: 117.6px;"></textarea>
+									<textarea class="textarea form-control" id="messageContact" asp-for="Message" placeholder="Your Message" rows="4" required="required" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')" style="overflow: hidden; overflow-wrap: break-word; height: 117.6px;"></textarea>
 									<div class="help-block with-errors"></div>
 								</div>
+								@* <div class="form-group col-12 col-md-12">
+									<textarea class="textarea form-control" id="messageContact" name="Address" placeholder="Your Address" rows="4" required="required" oninvalid="setCustomValidity('Fill in the field')" onkeyup="setCustomValidity('')" style="overflow: hidden; overflow-wrap: break-word; height: 117.6px;"></textarea>
+									<div class="help-block with-errors"></div>
+								</div> *@
 							</div>
 							<div class="row">
 								<div class="col-12 col-md-6 order-2 order-md-1 text-center text-md-left">
